# scumkiller

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/renderer/: shaderProgram.cpp  shaderProgram.hpp  texture2D.cpp  texture2D.hpp
src/resources/: resourceManager.cpp  resourceManager.hpp
